{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 93,
  "lineage": "239e18ae-537b-e008-04f6-c31f6fa288ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:security-group/sg-003c73d55f042c5c8",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-003c73d55f042c5c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "078790189915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020b5b93d0b33db24",
            "arn": "arn:aws:ec2:eu-central-1:078790189915:instance/i-0d6880254adf8dd9d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "put_S3",
            "id": "i-0d6880254adf8dd9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cs-dev-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e9d62017f84e74e",
            "private_dns": "ip-10-121-121-151.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.121.121.151",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Dev",
                  "Namespace": "cs",
                  "Project": "richads",
                  "env": "dev",
                  "env-index": "1"
                },
                "throughput": 125,
                "volume_id": "vol-0ca9113fd9209ed3e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bc87060ae73c7cf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003c73d55f042c5c8",
              "sg-0d8f9d2c4f398be7f"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_iam_instance_profile.put_S3",
            "aws_key_pair.main",
            "aws_security_group.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:security-group/sg-0d8f9d2c4f398be7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8f9d2c4f398be7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-access-cs-dev-1",
            "name_prefix": "",
            "owner_id": "078790189915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:network-acl/acl-00efe0a2eb41202cf",
            "default_network_acl_id": "acl-00efe0a2eb41202cf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00efe0a2eb41202cf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "078790189915",
            "subnet_ids": [
              "subnet-07e3289f60d22a323",
              "subnet-08bc87060ae73c7cf"
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:route-table/rtb-077e3365cd2a72ce0",
            "default_route_table_id": "rtb-077e3365cd2a72ce0",
            "id": "rtb-077e3365cd2a72ce0",
            "owner_id": "078790189915",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:security-group/sg-003c73d55f042c5c8",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-003c73d55f042c5c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "078790189915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-default",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0907cac67ddfde3d3",
            "association_id": "eipassoc-0d26abf5cba15ec21",
            "domain": "vpc",
            "id": "eipalloc-0907cac67ddfde3d3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b69c64bdef34f851",
            "private_dns": "ip-10-121-1-90.eu-central-1.compute.internal",
            "private_ip": "10.121.1.90",
            "public_dns": "ec2-3-79-163-24.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.163.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:internet-gateway/igw-01ce6616c67e90563",
            "id": "igw-01ce6616c67e90563",
            "owner_id": "078790189915",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0907cac67ddfde3d3",
            "association_id": "eipassoc-0d26abf5cba15ec21",
            "connectivity_type": "public",
            "id": "nat-0caf8b5dc73d12c51",
            "network_interface_id": "eni-0b69c64bdef34f851",
            "private_ip": "10.121.1.90",
            "public_ip": "3.79.163.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e3289f60d22a323",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d178c35af68dd341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0caf8b5dc73d12c51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d178c35af68dd34",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ce6616c67e90563",
            "id": "r-rtb-015e88b09fe03acfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015e88b09fe03acfe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:route-table/rtb-08d178c35af68dd34",
            "id": "rtb-08d178c35af68dd34",
            "owner_id": "078790189915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0caf8b5dc73d12c51",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-private",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-private",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:route-table/rtb-015e88b09fe03acfe",
            "id": "rtb-015e88b09fe03acfe",
            "owner_id": "078790189915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ce6616c67e90563",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-public",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-public",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1919d44271f10fd",
            "route_table_id": "rtb-08d178c35af68dd34",
            "subnet_id": "subnet-08bc87060ae73c7cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c6ea13e48057c5b",
            "route_table_id": "rtb-015e88b09fe03acfe",
            "subnet_id": "subnet-07e3289f60d22a323"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:subnet/subnet-08bc87060ae73c7cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.121.121.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bc87060ae73c7cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078790189915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-private-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-private-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:subnet/subnet-07e3289f60d22a323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.121.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e3289f60d22a323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078790189915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1-public-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1-public-eu-central-1a",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "vpc_id": "vpc-08b8b66a44ace6e98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:078790189915:vpc/vpc-08b8b66a44ace6e98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.121.0.0/16",
            "default_network_acl_id": "acl-00efe0a2eb41202cf",
            "default_route_table_id": "rtb-077e3365cd2a72ce0",
            "default_security_group_id": "sg-003c73d55f042c5c8",
            "dhcp_options_id": "dopt-01842585fd26bedfe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b8b66a44ace6e98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077e3365cd2a72ce0",
            "owner_id": "078790189915",
            "tags": {
              "Environment": "Dev",
              "Name": "cs-dev-1",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "cs-dev-1",
              "Namespace": "cs",
              "Project": "richads",
              "env": "dev",
              "env-index": "1"
            }
          }
        }
      ]
    }
  ]
}